--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.imgur.com/767IyY5.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.imgur.com/7s8tl1x.png"
+      sizes="16x16"
+    />
+    <link
+      rel="apple touch icon"
+      type="image/png"
+      href="https://i.imgur.com/jyLCh5Q.png"
+      sizes="180x180"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://i.imgur.com/nzRVL5H.png"
+      sizes="192x192"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
